--- a/vib.html
+++ b/vib.html
@@ -30,7 +30,7 @@
 
  </div>
 
- <div class="aaa">
+ <div class="xasan">
     <div class="cantiner">
         <h1> uzbekistoning internet Magazini</h1>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla vel est voluptate enim. Explicabo quia aspernatur voluptatibus, excepturi repellendus, iste veritatis, animi voluptate esse ipsum officiis adipisci facere. Corrupti, in?</p>
