--- a/vib.html
+++ b/vib.html
@@ -37,5 +37,25 @@
     </div>
 
  </div>
+
+ <div class="lola">
+
+
+
+<div class="lef">
+    <h3>Saytimizga Xush kelibsiz</h3>
+
+<div class="gula">
+<input type="text" placeholder="Your Email">
+<button class="gul">Saytimizga kirish</button>
+
+</div>
+</div>
+
+</div>
+
+ </div>
+
 </body>
+
 </html>
