--- a/vib.html
+++ b/vib.html
@@ -6,7 +6,7 @@
     
     <title>vib dizany</title>
     <link rel="stylesheet" href="imich/html.css">
-</head>kh,
+</head>
 <body>
  <div class="salom ">
     <div class="cantiner">
@@ -90,7 +90,8 @@
 </div>
 </div>
 
-<div id="footer">
+<div class="clr"></div>
+<div id="BBB">
 
     <p>salom dunyo 2024-yil</p>
 </div>
