--- a/vib.html
+++ b/vib.html
@@ -16,13 +16,13 @@
         </h1>
         <ul class="nnn">
             <li>
-                <a href="https://kun.uz"> Home</a>
+                <a href="vib.html" class="active"> Home</a>
             </li>
             <li>
-                <a href="*">About</a>
+                <a href="viob 2.html">About</a>
             </li>
             <li>
-                <a href="https://kun.uz">Services</a>
+                <a href="vib 3.html">Services</a>
             </li>
         </ul>
 
