--- a/vib 3.html
+++ b/vib 3.html
@@ -17,13 +17,13 @@
         </h1>
         <ul class="nnn">
             <li>
-                <a href="https://kun.uz"> Home</a>
+                <a href="vib.html"> Home</a>
             </li>
             <li>
-                <a href="*">About</a>
+                <a href="viob 2.html">About</a>
             </li>
             <li>
-                <a href="https://kun.uz">Services</a>
+                <a href="vib 3.html">Services</a>
             </li>
         </ul>
     </div>
@@ -57,29 +57,44 @@
         <h3> internet Magazin</h3>
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing  repellat ipsum rem voluptatem repudiandae, accusamus magni commodi non enim, consequuntur, autem iure?
-        </p>
+        </p><br>
 
-        <p>savdo qilin</p>
+        <p>savdo qilin</p><br>
 
     </div>
 
     <div class="bot">
         <h3>vib dizany</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque vero iusto repellendus hic sunt quia necessitatibus odio illo recusandae laudantium?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque vero iusto repellendus hic sunt quia necessitatibus odio illo recusandae laudantium?</p><br>
 
-        <p>1000k.uz</p>
+        <p>1000k.uz</p><br>
     </div>
 
 
     <div class="bot">
         <h3>fronted</h3>
-        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore architecto numquam natus quibusdam reprehenderit, excepturi atque nemo deserunt?</p>
-        <p>dasturchi</p>
+        <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore architecto numquam natus quibusdam reprehenderit, excepturi atque nemo deserunt?</p><br>
+        <p>dasturchi</p><br>
 
     </div>
 </div>
 
 <div class="www">
+
+    <div class="bll"> 
+        <h3>Get A Quote</h3><br>
+        <label >Name</label>
+       <input type="text" placeholder="Your Name" ><br>
+       <label >email</label>
+       <input type="text" placeholder="Your email"><br>
+       <label>Nessage</label>
+       <textarea></textarea>
+
+
+ 
+
+    </div>
+
     
     
        </div>
